  - SSLContext: dropped support for deprecated SSL and TLS versions.
    Only the methods "TLS", "TLSclient" and "TLSserver" are supported.
    The actual protocol version used will be negotiated to the highest
    version mutually supported by the client and the server.
  - SSLContext: added fallback to SSLv23_method when TLS_method is
    not available

Version 7.0.0 vom 29.07.2018 (Repo-Tag: REL_7_0_0)
  - Complete Rewrite, based on Version 6.4.7
  - Unittests with Google Test framework

Version 6.4.21
  - IdentAudioFile unterstützt nun Wave-Dateien
  - CTCPSocket::SSL_Stop: Return-Wert von SSL_shutdown wird jetzt
    korrekt interpretiert. Es wird kein shutdown mehr auf den Socket
    gemacht, da dies bei einer Abgebrochenden Verbindung zu einer
    Blockade führen kann.
  - CCurl: Neue Methode "getCurlHandle" liefert das interne Handle
    der libcurl zurück
  - CSSL: Unterstützung für TLS 1.1, TLS 1.2 und DTLS 1, sowie
    der Komfortmethode "TLS", die alle TLS-Versionen unterstützt,
    aber kein SSLv2 oder SSLv3.
  - Memory-Leak in MkDate behoben
  - Memory-Leak in CDateTime::get behoben
  - Memory-Leak in FileExists behoben
  - Bugfix im configure: SQLITE_LIBS und SQLITE_CFLAGS werden nur gesetzt,
    wenn sqlite auch gefunden wurde
  - NASM-Erkennung unter MSYS 2.0 i686 gefixt
  - Fixed: Deadlock in CThreadPool::Stop behoben
  - LPSTR wird nicht mehr verwendet

Version 6.4.20 vom 13.07.2014	(SVN-Tag: REL_6_4_20)
  - Funktion GetGlobalEncoding hinzugefügt
  - CID3Tag beachtet nun die globale Einstellung für die Kodierung
    der Strings
  - CID3Tag speichert Text-Tags nun grundsätzlich in UTF-16LE
  - Neue Funktionen: XmlEscape und XMLUnEscape
  - Neue Klasse: PythonHelper
  - Address-Parameter der HexDump-Funktionen ist nun als "const void *"
    deklariert
  - CID3Tag: Fehler beim Schreiben von Tags in AIFF-Files behoben
  - Überflüssige .svn-Ordner aus der Distribution entfernt
  - Unterstützung von AudioCD-s und CDDB mittels der neuen Klassen