@@ -26,6 +26,7 @@ Version 7.0.1
     version mutually supported by the client and the server.
   - SSLContext: added fallback to SSLv23_method when TLS_method is
     not available
+  - Digest: removed ECDSA from available hash algorithms
 
 Version 7.0.0 vom 29.07.2018 (Repo-Tag: REL_7_0_0)
   - Complete Rewrite, based on Version 6.4.7
